--- a/material_hamburgueseria/index.html
+++ b/material_hamburgueseria/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="wrapper">
+    <div class="wrapper" id="top">
         <header>
             <div class="nav-top">
                 <div class="container">
@@ -66,8 +66,13 @@
                 </div>
             </nav>
         </header>
+        <footer>
+            <div class="container">
+                <p>Copyright&copy;2023 - <a href="#">Aviso legal</a> - <a href="">Cookies</a></p>
+            </div>
+        </footer>
     </div>
-
+    <div class="flecha"><a href="#top"><i class="fa-solid fa-square-caret-up"></i></a></div>
 </body>
 
 </html>
