--- a/index.html
+++ b/index.html
@@ -66,7 +66,47 @@
                 </div>
             </nav>
         </header>
+        <div class="hero">
+            <div class="container">
+                <h1>Las mejores hamburguesas del mundo</h1>
+                <h2>ienvenido a nuestra hamburgueseria</h2>
+                <p>Come a partrir de 15$</p>
+                <div><a href="" class="boton">Nuestra carta <i class="fas fa-long-arrow-alt-right"></i></a>
+                </div>
+                <ul class="social">
+                    <li>
+                        <a href="#">
+                            <i class="fab fa-facebook"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fab fa-instagram">
+
+                            </i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <main>
+
+            </main>
+        </div>
     </div>
+    <footer>
+        <div class="container">
+            <p>Copyright&copy;2023 - <a href="#">Aviso legal</a> - <a href="">Cookies</a></p>
+        </div>
+    </footer>
+    </div>
+    <div class="flecha"><a href="#top"><i class="fa-solid fa-square-caret-up"></i></a></div>
+
+</body>
 
 </body>
 
