--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="hero">
             <div class="container">
                 <h1>Las mejores hamburguesas del mundo</h1>
-                <h2>ienvenido a nuestra hamburgueseria</h2>
+                <h2>Bienvenido a nuestra hamburgueseria</h2>
                 <p>Come a partrir de 15$</p>
                 <div><a href="" class="boton">Nuestra carta <i class="fas fa-long-arrow-alt-right"></i></a>
                 </div>
