estructura html de la seccion our servicies

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="container">
                     <figure>
                         <a href="index.html">
-                            <img src="./images/logo.jpg" alt="Rovers">
+                            <img src="../ejercicio_hamburgueseria/material_hamburgueseria/images/logo.jpg" alt="Rovers">
                         </a>
                     </figure>
                     <div class="hamburguesa">
@@ -70,7 +70,7 @@
             <div class="container">
                 <h1>Las mejores hamburguesas del mundo</h1>
                 <h2>Bienvenido a nuestra hamburgueseria</h2>
-                <p>Come a partrir de 15$</p>
+                <p>Come a partir de 15$</p>
                 <div><a href="" class="boton">Nuestra carta <i class="fas fa-long-arrow-alt-right"></i></a>
                 </div>
                 <ul class="social">
@@ -93,10 +93,51 @@
                     </li>
                 </ul>
             </div>
-            <main>
-
-            </main>
         </div>
+        <main>
+            <section id="services">
+                <div class="container">
+                    <h2>Our <span>Services</span></h2>
+                    <div class="underline">
+                        <hr noshade="noshade">
+                        <span>X</span>
+                    </div>
+                    <div class="grid">
+                        <article>
+                            <div>
+                                <i class="fas fa-cogs"></i>
+                            </div>
+                            <h3>1. Carne 100% natural</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis reprehenderit ea
+                                consectetur laboriosam nam consequatur rerum, tempora temporibus voluptatibus, alias
+                                tempore dolor! Aut culpa delectus unde, a facilis natus molestias.</p>
+                            <a href="" class="enlace">Leer mas<i class="fas fa-long-arrow-alt-right"></i></a>
+                        </article>
+                        <article>
+                            <div>
+                                <i class="fas fa-truck"></i>
+                            </div>
+                            <h3>2. Cocina moderna</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis reprehenderit ea
+                                consectetur laboriosam nam consequatur rerum, tempora temporibus voluptatibus, alias
+                                tempore dolor! Aut culpa delectus unde, a facilis natus molestias.</p>
+                            <a href="" class="enlace">Leer mas<i class="fas fa-long-arrow-alt-right"></i></a>
+                        </article>
+                        <article>
+                            <div>
+                                <i class="fas fa-heart"></i>
+                            </div>
+                            <h3>3. Servicio impecable</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis reprehenderit ea
+                                consectetur laboriosam nam consequatur rerum, tempora temporibus voluptatibus, alias
+                                tempore dolor! Aut culpa delectus unde, a facilis natus molestias.</p>
+                            <a href="" class="enlace">Leer mas<i class="fas fa-long-arrow-alt-right"></i></a>
+                        </article>
+                    </div>
+                </div>
+            </section>
+        </main>
+    </div>
     </div>
     <footer>
         <div class="container">
