Cambios en la hoja de estilos y creacion del menu

--- a/blog.html
+++ b/blog.html
@@ -21,21 +21,15 @@
                         </a>
                     </div>
                     <div>
-                        <a href="#">
-                            <i class="fa-solid fa-shopping-cart"></i>
-                            <span>Carrito compra</span>
-                        </a>
-                    </div>
-                    <div>
                         <a href="tel:9155556677">
                             <i class="fa-solid fa-phone"></i>
                             <span>91 555 66 77</span>
                         </a>
                     </div>
                     <div>
-                        <a href="mailto:rovers@gmail.com">
-                            <i class="fa-solid fa-envelope"></i>
-                            <span>rovers@gmail.com</span>
+                        <a href="#">
+                            <i class="fa-solid fa-shopping-cart"></i>
+                            <span>Carrito compra</span>
                         </a>
                     </div>
                     <div>
@@ -50,7 +44,7 @@
                 <div class="container">
                     <figure>
                         <a href="index.html">
-                            <img src="./images/logo.jpg" alt="Rovers">
+                            <img src="./material_hamburgueseria/images/logo.jpg" alt="Rovers">
                         </a>
                     </figure>
                     <div class="hamburguesa">
@@ -68,45 +62,55 @@
         </header>
         <main>
             <section class="container">
-                <h2>Our blogs</h2>
-                <hr>
-                <div>
-                    <article>
+                <div class="titulo">
+                    <h2> <span>Our</span> Blogs</h2>
+                    <hr>
+                    <p><strong>X</strong></p>
+                </div>
+
+                <div class="articles">
+                    <article class="food">
                         <figure>
-                            <img src="../images/news3.jpg" alt="food">
+                            <img src="" alt="">
+                            <div class="cuadrado">05 Mar
+                            </div>
                         </figure>
-                        <div>
+
+                        <div class="texto">
                             <h3>Our Weekly Best Food</h3>
                             <h4>Posted by Rovers</h4>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur totam saepe,
                                 repellat laborum consequatur eligendi animi minima aliquam aliquid? Doloremque.</p>
-                            <a href="#">Read More</a>
+                            <h4><a href="#">Read more <i class="fas fa-long-arrow-alt-right"></i></a></h4>
                         </div>
                     </article>
 
-                    <article>
+                    <article class="reasons">
                         <figure>
-                            <img src="../images/news4.jpg" alt="reasons">
+                            <img src="" alt="">
+                            <div class="cuadrado">17 Feb
+                            </div>
                         </figure>
-                        <div>
+                        <div class="texto">
                             <h3>Top Five Reasons To Visit</h3>
                             <h4>Posted by Rovers</h4>
                             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates possimus ut
                                 quibusdam culpa, iusto laudantium facere placeat eaque libero ipsa.</p>
-                            <a href="#">Read More</a>
+                            <h4><a href="#">Read more <i class="fas fa-long-arrow-alt-right"></i></a></h4>
                         </div>
                     </article>
 
-                    <article>
+                    <article class="restaurant">
                         <figure>
-                            <img src="../images/news1.jpg" alt="restaurant">
+                            <img src="" alt="">
+                            <div class="cuadrado">28 Feb</div>
                         </figure>
-                        <div>
+                        <div class="texto">
                             <h3>Restaurant's Inside Design</h3>
                             <h4>Posted by Rovers</h4>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim eaque obcaecati impedit
                                 corporis, vitae itaque ad illo consectetur recusandae fuga?.</p>
-                            <a href="#">Read More</a>
+                            <h4><a href="#">Read more <i class="fas fa-long-arrow-alt-right"></i></a></h4>
                         </div>
                     </article>
                 </div>
