--- a/menu.html
+++ b/menu.html
@@ -50,7 +50,7 @@
                 <div class="container">
                     <figure>
                         <a href="index.html">
-                            <img src="./images/logo.jpg" alt="Rovers">
+                            <img src="./material_hamburgueseria/images/logo.jpg" alt="Rovers">
                         </a>
                     </figure>
                     <div class="hamburguesa">
@@ -66,6 +66,56 @@
                 </div>
             </nav>
         </header>
+        <main>
+            <section class="container">
+                <div class="titulo">
+                    <h2> <span>Today's</span> Menu</h2>
+                    <hr>
+                    <p><strong>X</strong></p>
+                </div>
+                <div class="offers">
+                    <ul>
+                        <li><a href="">Breakfast</a></li>
+                        <li><a href="">Lunch</a></li>
+                        <li><a href="">Dinner</a></li>
+                        <li><a href="">Others</a></li>
+                    </ul>
+                    <h3>Today's Hot Offers</h3>
+                    <hr>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit nihil vel dolor unde nobis quod
+                        neque cumque aliquid. Id, voluptatibus?</p>
+                </div>
+                <div class="menu">
+                    <article>
+                        <figure>
+                            <img src="" alt="">
+                        </figure>
+                        <h3> <span>Chicken Burger With Cheese and Butter</span> $95</h3>
+                        <h4>Vegetable and chicken burger with extra butter</h4>
+                        <div><a href="" class="boton">Order Now <i class="fas fa-long-arrow-alt-right"></i></a>
+                        </div>
+                    </article>
+                    <article>
+                        <figure>
+                            <img src="" alt="">
+                        </figure>
+                        <h3> <span>Coffee and Tea with Milk and Chocolate</span> $30</h3>
+                        <h4>Vegetable and chicken burger with extra butter</h4>
+                        <div><a href="" class="boton">Order Now <i class="fas fa-long-arrow-alt-right"></i></a>
+                        </div>
+                    </article>
+                    <article>
+                        <figure>
+                            <img src="" alt="">
+                        </figure>
+                        <h3> <span>Hot Pizza With Extra Cheese and Butter</span> $95</h3>
+                        <h4>Vegetable and chicken burger with extra butter</h4>
+                        <div><a href="" class="boton">Order Now <i class="fas fa-long-arrow-alt-right"></i></a>
+                        </div>
+                    </article>
+                </div>
+            </section>
+        </main>
     </div>
 
 </body>
