--- a/home.html
+++ b/home.html
@@ -21,21 +21,15 @@
                         </a>
                     </div>
                     <div>
-                        <a href="#">
-                            <i class="fa-solid fa-shopping-cart"></i>
-                            <span>Carrito compra</span>
-                        </a>
-                    </div>
-                    <div>
                         <a href="tel:9155556677">
                             <i class="fa-solid fa-phone"></i>
                             <span>91 555 66 77</span>
                         </a>
                     </div>
                     <div>
-                        <a href="mailto:rovers@gmail.com">
-                            <i class="fa-solid fa-envelope"></i>
-                            <span>rovers@gmail.com</span>
+                        <a href="#">
+                            <i class="fa-solid fa-shopping-cart"></i>
+                            <span>Carrito compra</span>
                         </a>
                     </div>
                     <div>
@@ -50,7 +44,7 @@
                 <div class="container">
                     <figure>
                         <a href="index.html">
-                            <img src="./images/logo.jpg" alt="Rovers">
+                            <img src="./material_hamburgueseria/images/logo.jpg" alt="Rovers">
                         </a>
                     </figure>
                     <div class="hamburguesa">
@@ -66,6 +60,42 @@
                 </div>
             </nav>
         </header>
+        <div class="hero">
+            <div class="container">
+                <h1>Las mejores hamburguesas del mundo</h1>
+                <h2>Bienvenido a nuestra hamburgueseria</h2>
+                <p>Come a partir de 15€</p>
+                <div><a href="" class="boton">Nuestra carta <i class="fas fa-long-arrow-alt-right"></i></a>
+                </div>
+                <ul class="social">
+                    <li>
+                        <a href="#">
+                            <i class="fab fa-facebook"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fab fa-instagram">
+
+                            </i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div>
+        <footer>
+            <div class="container">
+                <p>Copyright&copy;2023 - <a href="#">Aviso legal</a> - <a href="">Cookies</a></p>
+            </div>
+        </footer>
+        <div class="flecha"><a href="#top"><i class="fa-solid fa-square-caret-up"></i></a></div>
     </div>
 
 </body>
