--- a/index.html
+++ b/index.html
@@ -21,21 +21,15 @@
                         </a>
                     </div>
                     <div>
-                        <a href="#">
-                            <i class="fa-solid fa-shopping-cart"></i>
-                            <span>Carrito compra</span>
-                        </a>
-                    </div>
-                    <div>
                         <a href="tel:9155556677">
                             <i class="fa-solid fa-phone"></i>
                             <span>91 555 66 77</span>
                         </a>
                     </div>
                     <div>
-                        <a href="mailto:rovers@gmail.com">
-                            <i class="fa-solid fa-envelope"></i>
-                            <span>rovers@gmail.com</span>
+                        <a href="#">
+                            <i class="fa-solid fa-shopping-cart"></i>
+                            <span>Carrito compra</span>
                         </a>
                     </div>
                     <div>
@@ -70,7 +64,7 @@
             <div class="container">
                 <h1>Las mejores hamburguesas del mundo</h1>
                 <h2>Bienvenido a nuestra hamburgueseria</h2>
-                <p>Come a partir de 15$</p>
+                <p>Come a partir de 15€</p>
                 <div><a href="" class="boton">Nuestra carta <i class="fas fa-long-arrow-alt-right"></i></a>
                 </div>
                 <ul class="social">
@@ -136,16 +130,98 @@
                     </div>
                 </div>
             </section>
+            <section id="aboutus">
+                <div class="container">
+                    <h2>About <span>Us</span></h2>
+                    <div class="underline">
+                        <hr noshade="noshade">
+                        <span>X</span>
+                    </div>
+                    <div class="grid">
+                        <figure>
+                            <div class="imagen">
+                                <div class="marco">
+                                    <img src="./material_hamburgueseria/images/about-main.jpg" alt="nuestro chef">
+                                </div>
+                            </div>
+                        </figure>
+                        <div>
+                            <h3>The history</h3>
+                            <h4>Our restaurant</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti facere maxime debitis
+                                iste fuga magni tenetur sed. Repellat exercitationem, natus, ratione inventore ipsam
+                                cumque, minima ab expedita non nemo quasi!</p>
+                            <div><a href="" class="boton">leer mas <i class="fas fa-long-arrow-alt-right"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="container">
+                <div class="titulo">
+                    <h2> <span>Our</span> Blogs</h2>
+                    <div class="underline">
+                        <hr noshade="noshade">
+                        <span>X</span>
+                    </div>
+                </div>
+                <div class="articles">
+                    <article class="food">
+                        <figure>
+                            <img src="" alt="">
+                            <div class="cuadrado">05 Mar
+                            </div>
+                        </figure>
+
+                        <div class="texto">
+                            <h3>Our Weekly Best Food</h3>
+                            <h4>Posted by Rovers</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur totam saepe,
+                                repellat laborum consequatur eligendi animi minima aliquam aliquid? Doloremque.</p>
+                            <h4><a href="#">Read more <i class="fas fa-long-arrow-alt-right"></i></a></h4>
+                        </div>
+                    </article>
+
+                    <article class="reasons">
+                        <figure>
+                            <img src="" alt="">
+                            <div class="cuadrado">17 Feb
+                            </div>
+                        </figure>
+                        <div class="texto">
+                            <h3>Top Five Reasons To Visit</h3>
+                            <h4>Posted by Rovers</h4>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates possimus ut
+                                quibusdam culpa, iusto laudantium facere placeat eaque libero ipsa.</p>
+                            <h4><a href="#">Read more <i class="fas fa-long-arrow-alt-right"></i></a></h4>
+                        </div>
+                    </article>
+
+                    <article class="restaurant">
+                        <figure>
+                            <img src="" alt="">
+                            <div class="cuadrado">28 Feb</div>
+                        </figure>
+                        <div class="texto">
+                            <h3>Restaurant's Inside Design</h3>
+                            <h4>Posted by Rovers</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim eaque obcaecati impedit
+                                corporis, vitae itaque ad illo consectetur recusandae fuga?.</p>
+                            <h4><a href="#">Read more <i class="fas fa-long-arrow-alt-right"></i></a></h4>
+                        </div>
+                    </article>
+                </div>
+            </section>
         </main>
     </div>
+    <div>
+        <footer>
+            <div class="container">
+                <p>Copyright&copy;2023 - <a href="#">Aviso legal</a> - <a href="">Cookies</a></p>
+            </div>
+        </footer>
+        <div class="flecha"><a href="#top"><i class="fa-solid fa-square-caret-up"></i></a></div>
     </div>
-    <footer>
-        <div class="container">
-            <p>Copyright&copy;2023 - <a href="#">Aviso legal</a> - <a href="">Cookies</a></p>
-        </div>
-    </footer>
-    </div>
-    <div class="flecha"><a href="#top"><i class="fa-solid fa-square-caret-up"></i></a></div>
 
 </body>
 
