hoja de estilos de menu terminada

--- a/index.html
+++ b/index.html
@@ -212,6 +212,72 @@
                     </article>
                 </div>
             </section>
+            <section id="menu">
+                <div class="container">
+                    <div class="wrapper">
+                        <div class="enunciado">
+                            <h2> <span>Today's</span> Menu</h2>
+                            <div class="underline">
+                                <hr noshade="noshade">
+                                <span>X</span>
+                            </div>
+                        </div>
+                        <div class="offers">
+                            <nav>
+                                <ul>
+                                    <li><a href="breakfast.html">Breakfast</a></li>
+                                    <li><a href="lunch.html">Lunch</a></li>
+                                    <li><a href="dinner.html">Dinner</a></li>
+                                    <li><a href="others.html">Others</a></li>
+                                </ul>
+                            </nav>
+                            <div class="today">
+                                <h3>Today's Hot Offers</h3>
+                                <hr noshade="noshade">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit nihil vel dolor unde
+                                    nobis
+                                    quod
+                                    neque cumque aliquid. Id, voluptatibus?</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu">
+                        <article>
+                            <figure>
+                                <img src="./material_hamburgueseria/images/t1.jpg" alt="">
+                            </figure>
+                            <div class="titulo">
+                                <h4> <span>Chicken Burger With Cheese and Butter</span> $95</h4>
+                                <p>Vegetable and chicken burger with extra butter</p>
+                                <div><a href="" class="boton">Order Now <i class="fas fa-long-arrow-alt-right"></i></a>
+                                </div>
+                            </div>
+                        </article>
+                        <article>
+                            <figure>
+                                <img src="./material_hamburgueseria/images/t4.jpg" alt="cafe">
+                            </figure>
+                            <div class="titulo">
+                                <h4> <span>Coffee and Tea with Milk and Chocolate</span> $30</h4>
+                                <p>Vegetable and chicken burger with extra butter</p>
+                                <div><a href="" class="boton">Order Now <i class="fas fa-long-arrow-alt-right"></i></a>
+                                </div>
+                            </div>
+                        </article>
+                        <article>
+                            <figure>
+                                <img src="./material_hamburgueseria/images/t3.jpg" alt="pizza">
+                            </figure>
+                            <div class="titulo">
+                                <h4> <span>Hot Pizza With Extra Cheese and Butter</span> $65</h4>
+                                <p>Vegetable and chicken burger with extra butter</p>
+                                <div><a href="" class="boton">Order Now <i class="fas fa-long-arrow-alt-right"></i></a>
+                                </div>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+            </section>
         </main>
     </div>
     <div>
