--- a/menu.html
+++ b/menu.html
@@ -64,10 +64,12 @@
             <section id="menu">
                 <div class="container">
                     <div class="wrapper">
-                        <h2> <span>Today's</span> Menu</h2>
-                        <div class="underline">
-                            <hr noshade="noshade">
-                            <span>X</span>
+                        <div class="enunciado">
+                            <h2> <span>Today's</span> Menu</h2>
+                            <div class="underline">
+                                <hr noshade="noshade">
+                                <span>X</span>
+                            </div>
                         </div>
                         <div class="offers">
                             <nav>
@@ -91,7 +93,7 @@
                     <div class="menu">
                         <article>
                             <figure>
-                                <img src="./material_hamburgueseria/images/t1.jpg" alt="hamburguesa">
+                                <img src="./material_hamburgueseria/images/t1.jpg" alt="">
                             </figure>
                             <div class="titulo">
                                 <h4> <span>Chicken Burger With Cheese and Butter</span> $95</h4>
@@ -126,15 +128,15 @@
                 </div>
             </section>
         </main>
-    </div>
-    <div>
-        <footer>
-            <div class="container">
-                <p>Copyright&copy;2023 - <a href="#">Aviso legal</a> - <a href="">Cookies</a></p>
-            </div>
-        </footer>
-        <div class="flecha"><a href="#top"><i class="fa-solid fa-square-caret-up"></i></a></div>
-    </div>
+
+        <div>
+            <footer>
+                <div class="container">
+                    <p>Copyright&copy;2023 - <a href="#">Aviso legal</a> - <a href="">Cookies</a></p>
+                </div>
+            </footer>
+            <div class="flecha"><a href="#top"><i class="fa-solid fa-square-caret-up"></i></a></div>
+        </div>
 </body>
 
 </html>
